@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2006,v 1.795 2006/07/22 19:46:51 abs Exp $
+$NetBSD: CHANGES-2006,v 1.796 2006/07/22 20:42:14 abs Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -3493,3 +3493,4 @@ Changes to the packages collection and infrastructure in 2006:
 	Updated net/vncviewer to 4.1.2 [abs 2006-07-22]
 	Added www/ap2-jk version 1.2.15 [abs 2006-07-22]
 	Updated www/apache-tomcat55 to 5.5.17 [abs 2006-07-22]
+	Updated pkgtools/pkg_chk to 1.77 [abs 2006-07-22]
